--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NZWalksConnectionString": "Server=(localdb)\\localDB1;Database=NZWalksDb2;Trusted_Connection=True;TrustServerCertificate=True"
+    "NZWalksConnectionString": "Server=(localdb)\\localDB1;Database=NZWalksDb2;Trusted_Connection=True;TrustServerCertificate=True",
+    "NZWalksAuthConnectionString": "Server=(localdb)\\localDB1;Database=NZWalksAuthDb; Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "yUYGjdgkVBdKHBFNvzkaqoivJHVBKJBnkjnkn",
+    "Issuer": "https://localhost:7016",
+    "Audience": "https://localhost:7016"
   }
 }
